# komplai-non-technical

./: .gitignore  .~lock.Larry-Launch-Action-Plan.xlsx#  .~lock.Larry-Launch-Plan-Feb2026.pdf#  E1-email-data-spec.md  Komplai_Context_Canonical.md
articles/: Feb_2026_Concept_Merge.md  Now is the best time to build, but also the hardest.txt  The_Cortex_and_The_Corp.md
battlecards/: README.md  battlecard-implementation-guide.md
client-insights/: .env.example  Client_Conversations_Analysis.csv  Client_Conversations_Analysis.tsv  Komplai_Insights.md  credentials.template.json  komplai_insights_2026-01-13.txt
collateral/: bank-reconciliation-onepager-draft.md  bank-reconciliation-onepager.html  journal-automation-onepager-draft.md  journal-automation-onepager.html
context/: Competitive_Intelligence_Updates.md  Komplai_Competitive_Analysis.docx  Project Hail Mary.txt  (+8 more)
demo-dummy-data/: .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  Dockerfile  PROJECT_COMPLETE.md  QUICKSTART.md  QUICKSTART_GUIDE.md  README.md  SETUP.md  STATUS.md  TEST_RESULTS.md  bank_generator.py  bill_generator.py  config.yaml  docker_run.sh  dummy-data-483609-2b5f128b43ad.json  eb00ca48-53b1-4c9e-8708-91c81bca9248-7dabd64b-5dda-4b7e-986a-007ca9c67e25.html  email_sender.py  excel_manager.py  fly.toml  invoice_generator.py  main.py  main_pipeline.py  pdf_generator.py  pyproject.toml  requirements.txt  run.sh  run_pipeline.sh  scheduler.py  setup.sh  sheets_manager.py  statement-june-test.html  test_components.py  utils.py
demo-dummy-data/.github/workflows/: weekly-pipeline.yml
(+110 files in other folders)
