[project]
name = "demo-dummy-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gspread>=6.2.1",
    "jinja2>=3.1.6",
    "oauth2client>=4.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "weasyprint>=67.0",
]
